# zephyr_hello_world_lua

./: .gitignore  CMakeLists.txt  README.md  prj.conf  west.yml
src/: CMakeLists.txt  main.c  missing_stubs.c
